<resources>
    <string name="app_name">TeleFlow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="recent_recordings">Recent Recordings</string>
    <string name="view_all">View All</string>
    <string name="recent_scripts">Recent Scripts</string>
    <string name="record_new_video">Record New Video</string>
    
    <!-- Login Screen -->
    <string name="sign_in_to_account">Sign in to your Account</string>
    <string name="login_subtitle">Enter your email and password to log in</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button">Login</string>
    <string name="logging_in">Logging in…</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="sign_up_here">Sign up here</string>
    <string name="email_required">Email is required</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="password_required">Password is required</string>
    <string name="password_too_short">Password must be at least 6 characters</string>
    
    <!-- Registration Screen -->
    <string name="create_account">Create account</string>
    <string name="full_name_label">Full Name</string>
    <string name="full_name_hint">Enter your name</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="register_button">Register</string>
    <string name="registering">Registering…</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="log_in_here">Log in here</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="name_required">Name is required</string>
    <string name="password_criteria">Password must be at least 6 characters with a number and special character</string>
    <string name="registration_successful">Registration successful</string>
</resources>